--- a/framework/source/resource/qx/mobile/scss/common/_scroller.scss
+++ b/framework/source/resource/qx/mobile/scss/common/_scroller.scss
@@ -34,3 +34,9 @@
 .scroll-container.scrollable-top:before, .scroll-container.scrollable-bottom:after {
   pointer-events:none;
 }
+
+.scroll.native {
+  -webkit-overflow-scrolling:touch;
+  overflow:scroll;
+}
+
